--- a/index.html
+++ b/index.html
@@ -45,12 +45,33 @@
                 </section>
                 <section class="conteiner-imgs">
                     <figure>
-                        <img class="all-img" src="images/Yoga.jpg" alt="Yoga">
-                        <img class="all-img" src="images/Music.JPG" alt="Music">
-                        <img class="all-img" src="images/Music2.jpg" alt="Music2">
-                        <img class="all-img" src="images/Women.jpg" alt="Women">
+                        <img class="all-img img1" src="images/Yoga.jpg" alt="Yoga">
+                        <img class="all-img img2" src="images/Music.JPG" alt="Music">
+                        <img class="all-img img3" src="images/Music2.jpg" alt="Music2">
+                        <img class="all-img img4" src="images/Women.jpg" alt="Women">
                     </figure>
                 </section>
             </main>
+            <footer>
+                <section class="conteiner-footer">
+                    <div class="conteiner-social-media">
+                        <figure>
+                            <a href="#" target="_blank"><img class="img-media" src="images/Instagran.png" alt="Instagran"></a>
+                            <a href="#" target="_blank"><img class="img-media" src="images/Facebook.png" alt="Facebook"></a>
+                            <a href="#" target="_blank"><img class="img-media" src="images/LinkedIn.png" alt="LinkedIn"></a>
+                            <a href="#" target="_blank"><img class="img-media" src="images/Pinterest.png" alt="Pinterest"></a>
+                        </figure>
+                    </div>
+                    <div class="conteiner-nav">
+                        <nav>
+                            <ul>
+                                <li><a href="#">Portfólio</a></li>
+                                <li><a href="#">Sobre</a></li>
+                                <li><a href="#">Contato</a></li>
+                            </ul>
+                        </nav> 
+                    </div>
+                </section>
+            </footer>
         </body>
     </html>
